Update (need check output)

--- a/code.ipynb
+++ b/code.ipynb
@@ -27,10 +27,12 @@
     "Projectiles = {'1':'Tonneau explosif', '2':'Boule de feu', '3':\"Potion jetable d'acide\", '4':'Parfum de poison'}\n",
     "\n",
     "statsMagnus = {'HP':150, 'DEF':10, 'DMG':10, 'critluck':0.30, 'luck':0.6, 'EXP':0, 'LVL':1}\n",
-    "ActionsMagnus = {'1':'Attaque basique', '2':'Parer', '3':'Utiliser un consommable', '4':'Fuire'}\n",
+    "ActionsMagnus = {'1':'Attaque basique', '2':'Parer (3 tours)', '3':\"Lancer l'arme en main (2x Dégâts mais vous faites ensuite moins de Dégâts)\", '4':'Utiliser un consommable', '5':'Fuire'}\n",
     "\n",
     "PotionDeSoin = {'1':'Petite potion de soin', '2':'Potion de soin moyenne', '3':'Grande potion de soin'}\n",
-    "Consommables = {'1':'Potion de soin(petite/moyenne/grande)', '2':'Potion de régénération', '3':'Potion de défense', '4':'Potion de rage', '5':'Piment'}\n"
+    "Consommables = {'1':'Potion de soin(petite/moyenne/grande)', '2':'Potion de régénération', '3':'Potion de défense', '4':'Potion de rage', '5':'Piment'}\n",
+    "\n",
+    "CombatStats = {}"
    ]
   },
   {
@@ -50,6 +52,8 @@
     "    \n",
     "    global stats\n",
     "    global ActionsDeCombat\n",
+    "    global statstoAppend\n",
+    "    global CombatStats\n",
     "\n",
     "    if ChoixHéros == 1: \n",
     "        stats = statsSalie\n",
@@ -60,8 +64,15 @@
     "        stats = statsMagnus\n",
     "        ActionsDeCombat = ActionsMagnus\n",
     "        print(\"Vous avez choisi Marcus.\")\n",
-    "        \n",
-    "    return ChoixHéros"
+    "    \n",
+    "    statstoAppend = ['HP', 'DEF', 'DMG']\n",
+    "    CombatStats = {key: stats[key] for key in statstoAppend}\n",
+    "                            \n",
+    "    print(\"Voici vos statistiques (Elles augmentent avec le niveau) : \")\n",
+    "    for key, value in stats.items():\n",
+    "        print(f\"{key}: {value}\")\n",
+    "\n",
+    "    return ChoixHéros\n"
    ]
   },
   {
@@ -87,22 +98,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mUnable to start Kernel 'Python 3.8.2' due to a timeout waiting for the ports to get used. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def AttaqueBasique(dmg): #Action 1\n",
-    "    Critique(stats['critluck'], stats['DMG'])\n",
-    "    if crit == True:\n",
+    "def AttaqueBasique(): #Action 1\n",
+    "    Critique(stats['critluck'], CombatStats['DMG'])\n",
+    "    if crit:\n",
     "        return \"Dégâts : \" + str(DamageDealt) + \"Vous avez fait un coup critique ! \"\n",
     "    else:\n",
     "        return \"Dégâts : \" + str(DamageDealt)\n",
@@ -112,11 +112,11 @@
     "    Parer = True\n",
     "    return \"Vous allez parer la prochaine attaque. \"\n",
     "\n",
-    "def LancerObjet(dmg, ProjectileLancé): #Salie Action 2\n",
+    "def LancerObjet(ProjectileLancé): #Salie Action 2 (Projectile)\n",
     "    if ProjectileLancé == 1: #Tonneau explosif\n",
     "\n",
     "        global DistanceDamage\n",
-    "        DistanceDamage = Critique(stats['critluck'], stats['DMG'])\n",
+    "        DistanceDamage = Critique(stats['critluck'], CombatStats['DMG'])\n",
     "        DistanceDamage = int(DistanceDamage*0.9)\n",
     "\n",
     "        if crit == True:\n",
@@ -126,43 +126,63 @@
     "        \n",
     "    if ProjectileLancé == 2: #Boule de feu\n",
     "\n",
-    "        global FireDamage\n",
+    "        global DistanceDamage\n",
+    "        global FireCondition\n",
+    "        global FireTours\n",
     "        global FireDOT\n",
-    "        FireDamage = Critique(stats['critluck'], stats['DMG'])\n",
-    "        FireDamage = FireDamage*0.80\n",
-    "        FireDOT = stats['DMG']\n",
-    "        FireDOT = int(FireDOT*0.25)\n",
+    "        FireCondition = True\n",
+    "        FireTours = 3\n",
+    "        DistanceDamage = Critique(stats['critluck'], stats['DMG'])\n",
+    "        DistanceDamage = DistanceDamage*0.80\n",
+    "        FireDOT = CombatStats['DMG']\n",
+    "        FireDOT = int(FireDOT*0.40)\n",
     "\n",
     "        if crit == True:\n",
-    "            return \"Dégâts : \" + str(FireDamage) + \"Vous avez fait un coup critique ! \" + \"Dégâts de feu pour 3 tours : \" + str(FireDOT)\n",
+    "            return \"Dégâts : \" + str(DistanceDamage) + \"Vous avez fait un coup critique ! \" + \"Dégâts de feu pour 3 tours : \" + str(FireDOT)\n",
     "        else:\n",
-    "            return \"Dégâts : \" + str(FireDamage) + \"Feu pour 3 tours : \" + str(FireDOT)\n",
+    "            return \"Dégâts : \" + str(DistanceDamage) + \"Feu pour 3 tours : \" + str(FireDOT)\n",
     "        \n",
     "    if ProjectileLancé == 3: #Potion jetable d'acide\n",
     "\n",
-    "        global AcideDamage\n",
     "        global DistanceDamage\n",
+    "        global AcidCondition\n",
+    "        global AcidTours\n",
+    "        global AcidDOT\n",
+    "        AcidCondition = True\n",
+    "        AcidTours = 3\n",
     "        DistanceDamage = Critique(stats['critluck'], stats['DMG'])\n",
     "        DistanceDamage = DistanceDamage*0.25\n",
-    "        FireDOT = stats['DMG']\n",
-    "        FireDOT = int(FireDOT*0.8)\n",
+    "        AcidDOT = stats['DMG']\n",
+    "        AcidDOT = int(AcidDOT*0.8)\n",
     "        \n",
     "        if crit == True:\n",
-    "            return \"Dégâts : \" + str(DistanceDamage) + \"Vous avez fait un coup critique ! \" + \"Dégâts de brûlure pour 3 tours : \" + str(FireDOT)\n",
+    "            return \"Dégâts : \" + str(DistanceDamage) + \"Vous avez fait un coup critique ! \" + \"Dégâts de brûlure pour 3 tours : \" + str(AcidDOT)\n",
     "        else:\n",
-    "            return \"Dégâts : \" + str(DistanceDamage) + \"Dégâts de brûlure pour 3 tours : \" + str(FireDOT)\n",
+    "            return \"Dégâts : \" + str(DistanceDamage) + \"Dégâts de brûlure pour 3 tours : \" + str(AcidDOT)\n",
     "        \n",
     "    if ProjectileLancé == 4: #Parfum de poison\n",
     "\n",
+    "        global PoisonCondition\n",
+    "        global PoisonTours\n",
     "        global PoisonDOT\n",
+    "        PoisonCondition = True\n",
+    "        PoisonTours = 999\n",
     "        PoisonDOT = stats['DMG']\n",
-    "        PoisonDOT = int(PoisonDOT*0.60)\n",
+    "        PoisonDOT = int(PoisonDOT*0.20)\n",
     "        return str(PoisonDOT) + \"Dégâts infligés au monstre chaque tour jusqu'à ce qu'il meurt. \"\n",
+    "\n",
+    "def LancerArme(): #Magnus Action 3\n",
+    "    global CombatStats\n",
+    "    Critique(stats['critluck'], CombatStats['DMG'])\n",
+    "    DamageDealt = DamageDealt*2\n",
+    "    CombatStats['DMG'] = int(CombatStats['DMG']/2)\n",
     "    \n",
-    "def UtiliserConsommable(Consommé, ChoixPotionDeSoin = 0):\n",
+    "\n",
+    "def UtiliserConsommable(Consommé, ChoixPotionDeSoin = 0): #Action 3/4 (Consommable)\n",
+    "    \n",
     "    if Consommé == 1: #Consommable 1 (Potion de Soin)\n",
     "\n",
-    "        global CombatHP\n",
+    "        global CombatStats\n",
     "        def UtiliserPotionDeSoin(ChoixPotionDeSoin = 0):\n",
     "            global Soin\n",
     "            if ChoixPotionDeSoin == 1:\n",
@@ -176,48 +196,79 @@
     "                return \"Vous vous soignez de : \" + str(Soin)\n",
     "        \n",
     "        UtiliserPotionDeSoin(ChoixPotionDeSoin)\n",
-    "        CombatHP = CombatHP*Soin\n",
-    "        if CombatHP > stats['HP']:\n",
-    "            CombatHP = stats['HP']\n",
+    "\n",
+    "        CombatStats['HP'] = int(CombatStats['HP']*Soin)\n",
+    "        if CombatStats['HP'] > stats['HP']:\n",
+    "            CombatStats['HP'] = stats['HP']\n",
     "    \n",
     "    if Consommé == 2: #Consommable 2 (Potion de Régénération)\n",
     "\n",
-    "        global CombatHP\n",
+    "        global CombatStats\n",
+    "        global RegenCondition \n",
+    "        global RegenTours\n",
     "        global Regen\n",
-    "        Regen = stats['HP']*0.2\n",
+    "        RegenCondition = True\n",
+    "        RegenTours = 3\n",
+    "        Regen = int(CombatStats['HP']*0.2)\n",
     "\n",
-    "        CombatHP = CombatHP*Regen\n",
-    "        if CombatHP > stats['HP']:\n",
-    "            CombatHP = stats['HP']\n",
+    "        CombatStats['HP'] = CombatStats['HP'] + Regen\n",
+    "        if CombatStats['HP'] > stats['HP']:\n",
+    "            CombatStats['HP'] = stats['HP']\n",
     "        return \"Vous vous soignez de : \" + str(Regen) + \" tous les tours.\"\n",
     "\n",
     "    if Consommé == 3: #Consommable 3 (Potion de Défense)\n",
     "\n",
-    "        global CombatDEF\n",
-    "        CombatDEF = int(CombatDEF*1.35)\n",
-    "        return \"Vous augmentez votre défense de : \" + str(CombatDEF) + \" pendant 5 tours.\"\n",
+    "        global DEFCondition\n",
+    "        global DEFTours\n",
+    "        global CombatStats\n",
+    "        DEFCondition = True\n",
+    "        DEFTours = 5\n",
+    "        CombatStats['DEF'] = int(CombatStats['DEF']*1.35)\n",
+    "        return \"Vous augmentez votre défense de \" + str(CombatStats['DEF']) + \" pendant 5 tours.\"\n",
     "    \n",
     "    if Consommé == 4: #Consommable 4 (Potion de Rage)\n",
     "\n",
-    "        global CombatDMG\n",
-    "        CombatDMG = int(CombatDMG*1.50)\n",
-    "        return \"Vos attaques infligent 50% de dégats supplémentaires. \" + str(CombatDMG)\n",
+    "        global RageCondition\n",
+    "        global RageTours\n",
+    "        global CombatStats\n",
+    "        RageCondition = True\n",
+    "        RageTours = 6\n",
+    "        CombatStats['DMG'] = int(CombatStats['DMG']*1.50)\n",
+    "        return \"Vos attaques infligeront 50% de dégats supplémentaires pour 5 tours : \" + str(CombatStats['DMG'])\n",
     "    \n",
-    "    if Consommé == 5:\n",
+    "    if Consommé == 5: #Consommable 5 (Piment)\n",
+    "\n",
+    "        print(\"Vous avez une chance d'esquiver les attaques pendant 3 tours ! \")\n",
+    "        global EsquiveCondition\n",
+    "        global EsquiveTours\n",
+    "        EsquiveCondition = True\n",
+    "        EsquiveTours = 3\n",
     "\n",
     "        def Dodge():\n",
     "            global Esquive\n",
-    "            Esquive = False\n",
     "            Agilité = 0.25\n",
-    "            if rd.random < Agilité:\n",
+    "\n",
+    "            if rd.random() <= Agilité:\n",
     "                Esquive = True\n",
     "                return \"\"\n",
+    "            else:\n",
+    "                Esquive = False\n",
+    "                return \"\"\n",
+    "        \n",
+    "        #A mettre dans la fonction d'attaque des monstres :\n",
+    "        # Dodge()\n",
+    "        # if Esquive:\n",
+    "        #     return \"Vous avez esquivé(e) l'attaque.\"\n",
+    "        # else:\n",
+    "        #     return \"\"\n",
     "\n",
-    "def TentativeFuite(): #Action 4\n",
+    "def TentativeFuite(): #Action 4/5 (Fuite)\n",
     "    global Fuite\n",
     "    Fuite = False\n",
+    "\n",
     "    ChanceFuite = float(stats['luck'])\n",
     "    ChanceFuite = ChanceFuite/2\n",
+    "\n",
     "    if rd.random <= ChanceFuite:\n",
     "        Fuite = True\n",
     "        return str(Personnages[ChoixHéros]) + \" a réussi à s'enfuire ! \"\n",
@@ -238,35 +289,22 @@
     "    for key, value in ActionsDeCombat.items():\n",
     "        print(f\"{ActionsDeCombat.keys}: {ActionsDeCombat.values}\")\n",
     "\n",
-    "    ChoixActionDeCombat = int(input('Choisissez votre action : '))\n",
+    "    ChoixActionDeCombat = int(input('Choisissez votre action : ')) #L'action Choisie ?\n",
     "    VerifInput(ActionsDeCombat, ChoixActionDeCombat)\n",
-    "    return ChoixActionDeCombat\n",
     "\n",
+    "    if ChoixActionDeCombat == 2 and ChoixHéros == 1: #Projectiles -> Quel projectile ?\n",
     "\n",
-    "def ActionDeCombatSuite(ChoixActionDeCombat): #Output du texte associé à l'action en question\n",
+    "        global ProjectileLancé\n",
+    "        print(\"Quel projectile voulez-vous lancer ? \")\n",
+    "        for key, value in Projectiles.items():\n",
+    "            print(f\"{Projectiles.keys}: {Projectiles.values}\")\n",
     "\n",
-    "    if ChoixActionDeCombat == 1:\n",
-    "        print(\"Attaque basique sur le monstre. \")\n",
-    "        return AttaqueBasique(stats['DMG'])\n",
+    "        ProjectileLancé = int(input('Projectile à lancer : '))\n",
+    "        VerifInput(Projectiles, ProjectileLancé)\n",
+    "        return Projectiles[ProjectileLancé]\n",
     "    \n",
-    "    if ChoixActionDeCombat == 2:\n",
+    "    elif (ChoixActionDeCombat == 3 and ChoixHéros == 1) or (ChoixActionDeCombat == 4 and ChoixHéros == 2): #Consommables -> Quel consommable ?\n",
     "\n",
-    "        if ChoixHéros == 1:\n",
-    "            global ProjectileLancé\n",
-    "            print(\"Quel projectile voulez-vous lancer ? \")\n",
-    "            for key, value in Projectiles.items():\n",
-    "                print(f\"{Projectiles.keys}: {Projectiles.values}\")\n",
-    "\n",
-    "\n",
-    "            ProjectileLancé = int(input('Projectile à lancer : '))\n",
-    "            VerifInput(Projectiles, ProjectileLancé)\n",
-    "            return str(Projectiles[ProjectileLancé])\n",
-    "        \n",
-    "        if ChoixHéros == 2:\n",
-    "            return ParerUneAttaque()\n",
-    "        \n",
-    "    if ChoixActionDeCombat == 3:\n",
-    "        \n",
     "        global Consommé\n",
     "        print(\"Quel consommable voulez-vous utiliser ? \")\n",
     "        for element in Consommables:\n",
@@ -274,19 +312,20 @@
     "        Consommé = int(input('Consommable : '))\n",
     "        VerifInput(Consommables, Consommé)\n",
     "\n",
-    "        if Consommé == 1:\n",
+    "        if Consommé == 1: #Potion de soin -> Quelle taille de potion de soin ?\n",
     "            global ChoixPotionDeSoin\n",
     "            print(\"Quel taille de potion de soin voulez-vous utiliser ? \")\n",
     "            for potion in PotionDeSoin.items():\n",
     "                print(f\"{PotionDeSoin.keys}: {PotionDeSoin.values}\")\n",
+    "                \n",
     "            ChoixPotionDeSoin = int(input(\"Potion : \"))\n",
     "            VerifInput(PotionDeSoin, ChoixPotionDeSoin)\n",
     "            return PotionDeSoin['ChoixPotionDeSoin']\n",
     "        else:\n",
     "            return Consommables['Consommé']\n",
     "        \n",
-    "    if ChoixActionDeCombat == 4:\n",
-    "        return TentativeFuite()"
+    "    else:\n",
+    "        return ActionsDeCombat[ChoixActionDeCombat]"
    ]
   },
   {
@@ -295,26 +334,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zone = [1, 2, 3, 4, 5]\n",
-    "def StatistiquesMonstre(zone):\n",
+    "zone = 1\n",
+    "\n",
+    "def Monstre(zone): #Définir les statistiques d'un monstre rencontré selon la zone \n",
+    "\n",
     "    global statsMonstre\n",
-    "    statsMonstre = {\n",
-    "        'HP': rd.randint(40, 60),\n",
-    "        'DEF': rd.randint(1, 3),\n",
-    "        'DMG': rd.randint(10, 14),\n",
-    "        'critluck': 0.20,\n",
-    "        'luck': 0.40,\n",
-    "        'lvl': 0\n",
-    "    }\n",
+    "    statsMonstre = {}\n",
+    "\n",
     "    for i in zone:\n",
     "        statsMonstre = {\n",
-    "        'HP': rd.randint(40+(20*(i-1)), 60+(20*(i-1))),\n",
-    "        'DEF': rd.randint(1+(i-1), 3+(i-1)),\n",
-    "        'DMG': rd.randint(10+(4*(i-1)), 14(4*(i-1))),\n",
-    "        'critluck': 0.20+(0.05*(i-1)),\n",
+    "        'HP': rd.randint(40 + (20 * (i - 1)), 60 + (20 * (i - 1))),\n",
+    "        'DEF': rd.randint(1 + (i - 1), 3 + (i - 1)),\n",
+    "        'DMG': rd.randint(10 + (4 * (i - 1)), 14 + (4 * (i - 1))),\n",
+    "        'critluck': 0.20 + (0.05 * (i - 1)),\n",
     "        'luck': 0.40,\n",
-    "        'lvl': 0+(i-1)\n",
-    "    }\n"
+    "        'lvl': 1 + (i - 1)\n",
+    "    }\n",
+    "    return statsMonstre\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def AttaqueBasiqueMonstre():\n",
+    "    \n",
+    "    Critique(statsMonstre['critluck'], statsMonstre['DMG'])\n",
+    "    if crit:\n",
+    "        return \"Dégâts reçus : \" + str(DamageDealt) + \"Le Monstre a fait un coup critique ! \"\n",
+    "    else:\n",
+    "        return \"Dégâts reçus : \" + str(DamageDealt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MinusHP(HPleft, dmg):\n",
+    "    global CombatStats\n",
+    "    CombatStats['HP'] = HPleft - dmg\n",
+    "    return \"Vous avez \" + str(stats['HP']) + \" HP restant.\"\n",
+    "\n",
+    "def MinusHPMonstre(HPleft, dmg):\n",
+    "    global statsMonstre\n",
+    "    statsMonstre['HP'] = HPleft - dmg\n",
+    "    return \"Le monstre a \" + str(statsMonstre['HP']) + \" HP restant.\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if ChoixHéros == 1:\n",
+    "    ToutesLesActions = [AttaqueBasique, LancerObjet, UtiliserConsommable, TentativeFuite]\n",
+    "if ChoixHéros == 2:\n",
+    "    ToutesLesActions = [AttaqueBasique, ParerUneAttaque, LancerArme, UtiliserConsommable, TentativeFuite]\n",
+    "    \n",
+    "Combat = True\n",
+    "while Combat == True:\n",
+    "    ActionDeCombat(ChoixHéros)\n",
+    "    if ChoixActionDeCombat == 1:\n",
+    "        AttaqueBasique()\n",
+    "    elif ChoixActionDeCombat == 2 and ChoixHéros == 1:\n",
+    "        LancerObjet(ProjectileLancé)\n",
+    "    elif ChoixActionDeCombat == 2 and ChoixHéros == 2:\n",
+    "        ParerUneAttaque()\n",
+    "    elif (ChoixActionDeCombat == 3 and ChoixHéros == 1) or (ChoixActionDeCombat == 4 and ChoixHéros == 2):\n",
+    "        UtiliserConsommable(Consommé, ChoixPotionDeSoin = 0)\n",
+    "    elif (ChoixActionDeCombat == 4 and ChoixHéros == 1) or (ChoixActionDeCombat == 5 and ChoixHéros == 2):\n",
+    "        TentativeFuite()\n",
+    "\n",
+    "    AttaqueBasiqueMonstre()"
    ]
   }
  ],
